[HUBZERO][#3518][TPL_HUBBASIC2013] Fixed issue with content-header-extra being too small

--- a/templates/hubbasic2013/css/main.css
+++ b/templates/hubbasic2013/css/main.css
@@ -970,7 +970,7 @@
 		right: 30px;
 		top: 0.5em;
 		text-align: right;
-		width: 300px;
+		min-width: 300px;
 	}
 	#content-header-extra ul,
 	#content-header-extra li,
